# MipMap

./: .gitignore  BATCH_SYSTEM.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/endstone_mipmap/: __init__.py  config.toml  main.py  map.py  sender.py
src/endstone_mipmap/commands/: loadmap.py
src/endstone_mipmap/core/: __init__.py  chunksSender.py  playersSender.py  sender.py  tracker.py
webmap/: .dockerignore  Dockerfile  app.py  main.py  requirements.txt  test_gen.py
webmap/api/: chunks.py  config.py  players.py  tiles.py  v1.py
webmap/assets/: data.json  small.json
webmap/core/: chunk_storage.py  config.py  logging.py  models.py  texture_manager.py  tileRender.py  tile_renderer.py
webmap/models/: chunk.py  player.py
webmap/services/: playerService.py  tileGenerator.py  tileService.py  zoomGenerator.py
webmap/web/static/css/: style.css
webmap/web/static/js/: map.js
webmap/web/templates/: index.html
