[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MipMap"
version = "0.0.1"
dependencies = []
authors = [
    { name = "Mipa" },
]
description = "MipMap - Interactive Online Map for Endstone"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/MipaSenpai/MipMap"

[project.entry-points."endstone"]
example = "endstone_example:ExamplePlugin"
