[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-mipmap"
version = "0.0.1"
dependencies = []
authors = [
    { name = "Mipa" },
]
description = "MipMap - Interactive Online Map for Endstone."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "map"]

[project.urls]
Homepage = "https://github.com/MipaSenpai/MipMap"

[project.entry-points."endstone"]
mipmap = "endstone_mipmap:Map"